@@ -1,3 +1,11 @@
+Sun, 09 Dec 2007 13:20:49 +0100 <thp@perli.net>
+Fix pre-setting code for filechooser buttons; Patch by Paul Rudkin
+
+	* src/gpodder/config.py: Fix pre-setting code for filechooser-related
+	code; use set_current_folder() instead of set_filename()
+	* src/gpodder/gui.py: Fix pre-setting code for filechooser-related
+	code; thanks to Paul Rudkin <paul@thegithouse.com> for the patch
+
 Thu, 06 Dec 2007 09:37:57 +0100 <thp@perli.net>
 Support for itms:// links (direct links to the Apple iTunes Music Store)
 
